<resources>
    <string name="app_name">MainLauncherApp</string>
    <string name="action_login">Login</string>
    <string name="action_help">Help</string>
    <string name="str1">Intent</string>
    <string name="str2">IntentForResult</string>
    <string name="str3">AsyncTask</string>
    <string name="str4">ProgressBar</string>
    <string name="str5">CameraControl</string>
    <string name="str6">Gesture</string>
    <string name="str7">ZoomText</string>
    <string name="str8">ListView</string>
    <string name="str9">SQLiteCheck</string>
    <string name="str10">Member</string>
    <string name="str11">Intent</string>
    <string name="str12">Intent</string>
    <string name="btn_close">Close</string>
    <string name="btn_insert">Insert</string>
    <string name="btn_shot">Shot</string>
    <string name="btn_zoom_in">Zoom In</string>
    <string name="btn_zoom_out">Zoom Out</string>
    <string name="btn_read">Read</string>
    <string name="btn_write">Write</string>
    <string name="btn_save">Save</string>
    <string name="btn_update">Update</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_join">Join</string>
    <string name="btn_find">Find</string>
    <string name="intent_textView">result >></string>
    <string name="loading">Loading...</string>
    <string name="zoomText">
        LG전자(066570)가 인공지능, 로봇, 자율주행차 등 차세대 사업 분야에 새로운 조직을 출범시키며 미래 경쟁력 강화에 나섰다.\n
        특히 CEO 산하 조직에 신사업 추진 조직을 대거 포진시키며 조성진 부회장의 책임 경영을 강화하는 모양새다.
    </string>
    <string name="selected_item">Selected Item</string>
    <string name="insert_id">ID</string>
    <string name="insert_name">Name</string>
    <string name="insert_pass">Password</string>
    <string name="id_hint">email address</string>
</resources>
