<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/action_login"
            android:textColor="#bc4d2b"
            android:textSize="40sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/insert_id"
                    android:textAllCaps="false"
                    android:textColor="#bc4d2b"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText_id_login"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/id_hint"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/insert_pass"
                    android:textAllCaps="false"
                    android:textColor="#bc4d2b"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText_pass_login"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:weightSum="5">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_button2"
                android:onClick="click_Btn"
                android:text="@string/action_login"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button2"
                android:onClick="click_Btn"
                android:text="@string/btn_cancel"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btn_join"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button2"
                android:onClick="click_Btn"
                android:text="@string/btn_join"
                android:textAllCaps="false"
                android:textColor="#ffffff" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>